--- a/destiny4.0/colectivos/ilimitada_plus_600/index.html
+++ b/destiny4.0/colectivos/ilimitada_plus_600/index.html
@@ -1,7 +1,8 @@
-<link href="css/ws10.css?v=3ce991c758a0b41c15e07f45e341ca1d" rel="stylesheet">
-<link href="css/styles.css?v=4cb466fca359c7097e0a43a8c3e0701d" rel="stylesheet" data-ws10-microcss="">
+<link href="css/ws10.css?v=97d403e4a996309e9641588c9e0037d6" rel="stylesheet">
+<link href="css/styles.css?v=a4191dd0a9e29131583201eb1c37d882" rel="stylesheet" data-ws10-microcss="">
 <script>
-utag_data.plans_add2cart = [{ "product_name": "vodafone one ilimitada plus 600mbps", "product_category": "movil+fibra", "product_variant": "datos y minutos ilimitados+600mbps fibra", "promotion_price_name": "promo colectivos + promo 50% one ilimitada plus 600mb", "promotion_gift_name": "", "product_id": "168446429", "product_detail": "", "product_sale_type": "yes:transactional", "product_additional_lines": [{ "product_name": "tarifa movil ilimitada esencial", "product_category": "movil", "product_variant": "datos ilimitados", "promotion_price_name": "2 x 1 ilimitada esencial gratis", "promotion_gift_name": "", "product_id": "268548230" }], "product_packs_tv": [{ "product_name": "pack seriefans", "product_category": "tv", "promotion_price_name": "seriefans incluido en ilimitada plus y one ilimitada plus", "promotion_gift_name": "", "product_id":"268547964"}]},{"product_name": "vodafone one ilimitada plus 600mbps","product_category": "movil+fibra","product_variant": "datos y minutos ilimitados+600mbps fibra","promotion_price_name": "promo colectivos + promo 50% one ilimitada plus 600mb","promotion_gift_name": "","product_id": "168446429","product_detail": "","product_sale_type": "yes:transactional","product_packs_tv": [{"product_name": "pack seriefans","product_category": "tv","promotion_price_name": "seriefans incluido en ilimitada plus y one ilimitada plus","promotion_gift_name": "","product_id": "268547964"}]}]
+utag_data.plans_add2cart = [{ "product_name": "vodafone one ilimitada plus x2 600mbps", "product_category": "movil+fibra", "product_variant": "datos y minutos ilimitados+600mbps fibra optica", "promotion_price_name": "promo colectivos hogar ilimitable - 50% dto. 3 meses", "promotion_gift_name": "", "product_id": "268548269", "product_detail": "", "product_sale_type": "yes:transactional", "product_additional_lines": [{ "product_name": "", "product_category": "", "promotion_price_name": "", "product_id": "" }], "product_packs_tv": [{ "product_name": "", "product_category": "", "promotion_price_name": "", "promotion_gift_name": "", "product_id":""}]},{"product_name": "vodafone one ilimitada plus x2 600mbps ilimitada total pack tv plus x2 series","product_category": "movil+fibra","product_variant": "datos y minutos ilimitados+600mbps fibra optica","promotion_price_name": "promo colectivos hogar ilimitable - 50% dto. 3 meses","promotion_gift_name": "","product_id": "268548269","product_detail": "","product_sale_type": "yes:transactional","product_packs_tv": [{"product_name": "","product_category": "","promotion_price_name": "","promotion_gift_name": "","product_id": ""}]}]
+
 
 
 </script>
@@ -814,7 +815,7 @@ utag_data.plans_add2cart = [{ "product_name": "vodafone one ilimitada plus 600mb
         </span>
       </div>
    
-     <a href="https://www.vodafone.es/c/tienda-online/particulares/contratacion?id=1071017&amp;tcli=0&amp;tta=2" data-cta="300:port:card" target="_self" name="Lo quiero" title="Lo quiero" class="ws10-c-button ws10-c-button--auto vf-button--mobile" onmousedown="addtocart(utag_data.plans_add2cart[1])" data-analytics-context="lo quiero" data-analytics-element="cardrate" data-analytics-category="cta" data-analytics-id="-4725875100583">
+     <a href=" https://www.vodafone.es/c/tienda-online/particulares/contratacion?id=1347798&amp;tcli=0&amp;tta=13" data-cta="300:port:card" target="_self" name="Lo quiero" title="Lo quiero" class="ws10-c-button ws10-c-button--auto vf-button--mobile" onmousedown="addtocart(utag_data.plans_add2cart[1])" data-analytics-context="lo quiero" data-analytics-element="cardrate" data-analytics-category="cta" data-analytics-id="-4725875100583">
        Lo quiero
    
          <span class="ws10-u--hidden-visually"></span>
@@ -849,78 +850,78 @@ utag_data.plans_add2cart = [{ "product_name": "vodafone one ilimitada plus 600mb
                     <picture>
                         <source class="ws10-u--pr1x" srcset="img/section-tv/popup/hbo.webp?v=a1ee7fe959a3cd8ff164013eb448246d" type="image/webp">
                         <source class="ws10-u--pr1x" srcset="img/section-tv/popup/hbo.png?v=60225b61d8fd3ec15dd26d0abe14eff0" type="image/png">
-                        <img class="" src="img/section-tv/popup/hbo.png?v=60225b61d8fd3ec15dd26d0abe14eff0" alt="logo HBO">
-                    </picture>                  <p class="ws10-c-paragraph ws10-u--mb0 ws10-u--mt2x">logo HBO</p>
+                        <img class="" src="img/section-tv/popup/hbo.png?v=60225b61d8fd3ec15dd26d0abe14eff0" alt="HBO">
+                    </picture>                  <p class="ws10-c-paragraph ws10-u--mb0 ws10-u--mt2x">HBO</p>
                 </li>
                 <li class="ws10-o-layout__item ws10-u--1/4 ws10-u--1/7@tablet ws10-align--center ws10-u--pl0">
                     <picture>
-                        <source class="ws10-u--pr1x" srcset="img/section-tv/popup/amazon.webp?v=b203bb631ce1b44581361ea18b066fab" type="image/webp">
-                        <source class="ws10-u--pr1x" srcset="img/section-tv/popup/amazon.png?v=7f866fcb803cb6f452419bca56aaf7ad" type="image/png">
-                        <img class="" src="img/section-tv/popup/amazon.png?v=7f866fcb803cb6f452419bca56aaf7ad" alt="logo amazon">
-                    </picture>                  <p class="ws10-c-paragraph ws10-u--mb0 ws10-u--mt2x">logo amazon</p>
+                        <source class="ws10-u--pr1x" srcset="img/section-tv/popup/comunes/amazon.webp?v=1edea8387578846cc95e9240c1c058b8" type="image/webp">
+                        <source class="ws10-u--pr1x" srcset="img/section-tv/popup/comunes/amazon.png?v=c363ace4525eb5f827e1e75d68fa0ca4" type="image/png">
+                        <img class="" src="img/section-tv/popup/comunes/amazon.png?v=c363ace4525eb5f827e1e75d68fa0ca4" alt="amazon">
+                    </picture>                  <p class="ws10-c-paragraph ws10-u--mb0 ws10-u--mt2x">amazon</p>
                 </li>
                 <li class="ws10-o-layout__item ws10-u--1/4 ws10-u--1/7@tablet ws10-align--center ws10-u--pl0">
                     <picture>
                         <source class="ws10-u--pr1x" srcset="img/section-tv/popup/foxnow.webp?v=a51c955a3add7b5eab10dfdb791dc06d" type="image/webp">
                         <source class="ws10-u--pr1x" srcset="img/section-tv/popup/foxnow.png?v=afc1258eb86512fbc39a31ff87ed67d4" type="image/png">
-                        <img class="" src="img/section-tv/popup/foxnow.png?v=afc1258eb86512fbc39a31ff87ed67d4" alt="logo foxnow">
-                    </picture>                  <p class="ws10-c-paragraph ws10-u--mb0 ws10-u--mt2x">logo foxnow</p>
+                        <img class="" src="img/section-tv/popup/foxnow.png?v=afc1258eb86512fbc39a31ff87ed67d4" alt="foxnow">
+                    </picture>                  <p class="ws10-c-paragraph ws10-u--mb0 ws10-u--mt2x">foxnow</p>
                 </li>
                 <li class="ws10-o-layout__item ws10-u--1/4 ws10-u--1/7@tablet ws10-align--center ws10-u--pl0">
                     <picture>
                         <source class="ws10-u--pr1x" srcset="img/section-tv/popup/fox.webp?v=8f397803e9bacd07adc129a2806142b0" type="image/webp">
                         <source class="ws10-u--pr1x" srcset="img/section-tv/popup/fox.png?v=142318fd5c7cb254e032664135520df5" type="image/png">
-                        <img class="" src="img/section-tv/popup/fox.png?v=142318fd5c7cb254e032664135520df5" alt="logo FOX">
-                    </picture>                  <p class="ws10-c-paragraph ws10-u--mb0 ws10-u--mt2x">logo FOX</p>
+                        <img class="" src="img/section-tv/popup/fox.png?v=142318fd5c7cb254e032664135520df5" alt="FOX">
+                    </picture>                  <p class="ws10-c-paragraph ws10-u--mb0 ws10-u--mt2x">FOX</p>
                 </li>
                 <li class="ws10-o-layout__item ws10-u--1/4 ws10-u--1/7@tablet ws10-align--center ws10-u--pl0">
                     <picture>
                         <source class="ws10-u--pr1x" srcset="img/section-tv/popup/tnt.webp?v=a5219749aeb9c92d7845b37b06053a7f" type="image/webp">
                         <source class="ws10-u--pr1x" srcset="img/section-tv/popup/tnt.png?v=6ba2576f5b15fd3a5200ca01096208e8" type="image/png">
-                        <img class="" src="img/section-tv/popup/tnt.png?v=6ba2576f5b15fd3a5200ca01096208e8" alt="logo TNT">
-                    </picture>                  <p class="ws10-c-paragraph ws10-u--mb0 ws10-u--mt2x">logo TNT</p>
+                        <img class="" src="img/section-tv/popup/tnt.png?v=6ba2576f5b15fd3a5200ca01096208e8" alt="TNT">
+                    </picture>                  <p class="ws10-c-paragraph ws10-u--mb0 ws10-u--mt2x">TNT</p>
                 </li>
                 <li class="ws10-o-layout__item ws10-u--1/4 ws10-u--1/7@tablet ws10-align--center ws10-u--pl0">
                     <picture>
                         <source class="ws10-u--pr1x" srcset="img/section-tv/popup/syfy.webp?v=edb068532349d3591ceb44e462f9aa57" type="image/webp">
                         <source class="ws10-u--pr1x" srcset="img/section-tv/popup/syfy.png?v=d7b8d7d31c3835898fac1bc2d0d472bb" type="image/png">
-                        <img class="" src="img/section-tv/popup/syfy.png?v=d7b8d7d31c3835898fac1bc2d0d472bb" alt="logo syfy">
-                    </picture>                  <p class="ws10-c-paragraph ws10-u--mb0 ws10-u--mt2x">logo syfy</p>
+                        <img class="" src="img/section-tv/popup/syfy.png?v=d7b8d7d31c3835898fac1bc2d0d472bb" alt="syfy">
+                    </picture>                  <p class="ws10-c-paragraph ws10-u--mb0 ws10-u--mt2x">syfy</p>
                 </li>
                 <li class="ws10-o-layout__item ws10-u--1/4 ws10-u--1/7@tablet ws10-align--center ws10-u--pl0">
                     <picture>
                         <source class="ws10-u--pr1x" srcset="img/section-tv/popup/amcseries.webp?v=2b2bddf9362604914ea5c830fa17b3b3" type="image/webp">
                         <source class="ws10-u--pr1x" srcset="img/section-tv/popup/amcseries.png?v=32691e949e48a57946e47fa859e40269" type="image/png">
-                        <img class="" src="img/section-tv/popup/amcseries.png?v=32691e949e48a57946e47fa859e40269" alt="logo amc series">
-                    </picture>                  <p class="ws10-c-paragraph ws10-u--mb0 ws10-u--mt2x">logo amc series</p>
+                        <img class="" src="img/section-tv/popup/amcseries.png?v=32691e949e48a57946e47fa859e40269" alt="amc series">
+                    </picture>                  <p class="ws10-c-paragraph ws10-u--mb0 ws10-u--mt2x">amc series</p>
                 </li>
                 <li class="ws10-o-layout__item ws10-u--1/4 ws10-u--1/7@tablet ws10-align--center ws10-u--pl0">
                     <picture>
                         <source class="ws10-u--pr1x" srcset="img/section-tv/popup/calle13.webp?v=fe4710f4953b062353703dedd53c2587" type="image/webp">
                         <source class="ws10-u--pr1x" srcset="img/section-tv/popup/calle13.png?v=1991ba01c0a5eee4c67825672ac2af12" type="image/png">
-                        <img class="" src="img/section-tv/popup/calle13.png?v=1991ba01c0a5eee4c67825672ac2af12" alt="logo calle 13">
-                    </picture>                  <p class="ws10-c-paragraph ws10-u--mb0 ws10-u--mt2x">logo calle 13</p>
+                        <img class="" src="img/section-tv/popup/calle13.png?v=1991ba01c0a5eee4c67825672ac2af12" alt="calle 13">
+                    </picture>                  <p class="ws10-c-paragraph ws10-u--mb0 ws10-u--mt2x">calle 13</p>
                 </li>
                 <li class="ws10-o-layout__item ws10-u--1/4 ws10-u--1/7@tablet ws10-align--center ws10-u--pl0">
                     <picture>
                         <source class="ws10-u--pr1x" srcset="img/section-tv/popup/axnnow.webp?v=34725f404429000f37d4ca93ff549153" type="image/webp">
                         <source class="ws10-u--pr1x" srcset="img/section-tv/popup/axnnow.png?v=3148be63e792df03e3b129a04479c2bb" type="image/png">
-                        <img class="" src="img/section-tv/popup/axnnow.png?v=3148be63e792df03e3b129a04479c2bb" alt="logo AXN NOW">
-                    </picture>                  <p class="ws10-c-paragraph ws10-u--mb0 ws10-u--mt2x">logo AXN NOW</p>
+                        <img class="" src="img/section-tv/popup/axnnow.png?v=3148be63e792df03e3b129a04479c2bb" alt="AXN NOW">
+                    </picture>                  <p class="ws10-c-paragraph ws10-u--mb0 ws10-u--mt2x">AXN NOW</p>
                 </li>
                 <li class="ws10-o-layout__item ws10-u--1/4 ws10-u--1/7@tablet ws10-align--center ws10-u--pl0">
                     <picture>
                         <source class="ws10-u--pr1x" srcset="img/section-tv/popup/axn.webp?v=8cece348bd892cd8ba02760590aad9df" type="image/webp">
                         <source class="ws10-u--pr1x" srcset="img/section-tv/popup/axn.png?v=6b43004e796d6632b827ffa240fc6325" type="image/png">
-                        <img class="" src="img/section-tv/popup/axn.png?v=6b43004e796d6632b827ffa240fc6325" alt="logo AXN">
-                    </picture>                  <p class="ws10-c-paragraph ws10-u--mb0 ws10-u--mt2x">logo AXN</p>
+                        <img class="" src="img/section-tv/popup/axn.png?v=6b43004e796d6632b827ffa240fc6325" alt="AXN">
+                    </picture>                  <p class="ws10-c-paragraph ws10-u--mb0 ws10-u--mt2x">AXN</p>
                 </li>
                 <li class="ws10-o-layout__item ws10-u--1/4 ws10-u--1/7@tablet ws10-align--center ws10-u--pl0">
                     <picture>
                         <source class="ws10-u--pr1x" srcset="img/section-tv/popup/axnwhite.webp?v=6c4bd70e9d8cc41c46cdca6169c903a4" type="image/webp">
                         <source class="ws10-u--pr1x" srcset="img/section-tv/popup/axnwhite.png?v=bf100aed44e590ba4082e9c2d32740ff" type="image/png">
-                        <img class="" src="img/section-tv/popup/axnwhite.png?v=bf100aed44e590ba4082e9c2d32740ff" alt="logo AXN White">
-                    </picture>                  <p class="ws10-c-paragraph ws10-u--mb0 ws10-u--mt2x">logo AXN White</p>
+                        <img class="" src="img/section-tv/popup/axnwhite.png?v=bf100aed44e590ba4082e9c2d32740ff" alt="AXN White">
+                    </picture>                  <p class="ws10-c-paragraph ws10-u--mb0 ws10-u--mt2x">AXN White</p>
                 </li>
                 <li class="ws10-o-layout__item ws10-u--1/4 ws10-u--1/7@tablet ws10-align--center ws10-u--pl0">
                     <picture>
@@ -1304,4 +1305,4 @@ utag_data.plans_add2cart = [{ "product_name": "vodafone one ilimitada plus 600mb
     </div>
 </div>
 <script src="js/ws10.js?v=521cabc8fcef977203a83b9138d86531"></script>
-<script src="js/main.js?v=f2be02c12205a49ec84e348a1f7c27b6"></script>
+<script src="js/main.js?v=e3c4ed69077b2d584c6ccc4a5e0ac730"></script>
